--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -7,13 +5,13 @@ services:
       dockerfile: Dockerfile
 
     volumes:
-      - ../..:/workspaces:cached
+      - ..:/workspaces:cached
 
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
 
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-    network_mode: service:db
+    network_mode: service:emulator
     
     # Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
     # user: root
@@ -26,7 +24,7 @@ services:
     image: "mcr.microsoft.com/azure-messaging/eventhubs-emulator:latest"
     pull_policy: always
     volumes:
-      - "./ehconfig.json:/Eventhubs_Emulator/ConfigFiles/Config.json"
+      - ../ehconfig.json:/Eventhubs_Emulator/ConfigFiles/Config.json:ro
     ports:
       - "5672:5672"
       - "9092:9092"
@@ -37,10 +35,7 @@ services:
       ACCEPT_EULA: Y
     depends_on:
       - azurite
-    networks:
-      eh-emulator:
-        aliases:
-          - "eventhubs-emulator"
+
   azurite:
     container_name: "azurite"
     image: "mcr.microsoft.com/azure-storage/azurite:latest"
@@ -49,10 +44,6 @@ services:
       - "10000:10000"
       - "10001:10001"
       - "10002:10002"
-    networks:
-      eh-emulator:
-        aliases:
-          - "azurite"
 
 volumes:
-  postgres-data:
+  ehconfig.json:
