--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
 
     volumes:
-      - ..:/workspaces:cached
+      - ..:/workspace:cached
 
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
@@ -23,8 +23,11 @@ services:
     container_name: "eventhubs-emulator"
     image: "mcr.microsoft.com/azure-messaging/eventhubs-emulator:latest"
     pull_policy: always
-    volumes:
-      - ../ehconfig.json:/Eventhubs_Emulator/ConfigFiles/Config.json:ro
+#    volumes:
+#      - ../ehconfig.json:/Eventhubs_Emulator/ConfigFiles/Config.json:ro
+    #configs:
+    #  - source: Config.json
+    #    target: /Eventhubs_Emulator/ConfigFiles
     ports:
       - "5672:5672"
       - "9092:9092"
@@ -45,5 +48,33 @@ services:
       - "10001:10001"
       - "10002:10002"
 
-volumes:
-  ehconfig.json:
+#volumes:
+#  ehconfig.json:
+
+configs:
+  Config.json:
+    content: |
+      {
+        "UserConfig": {
+            "NamespaceConfig": [
+            {
+                "Type": "EventHub",
+                "Name": "emulatorNs1",
+                "Entities": [
+                {
+                    "Name": "eh1",
+                    "PartitionCount": 2,
+                    "ConsumerGroups": [
+                    {
+                        "Name": "cg1"
+                    }
+                    ]
+                }
+                ]
+            }
+            ], 
+            "LoggingConfig": {
+                "Type": "File"
+            }
+        }
+      }
